--- a/ex02.css
+++ b/ex02.css
@@ -1,6 +1,6 @@
-h3 {background-color: yellow; font-size: 30px;}
-.h3 {background-color: aqua; color: aliceblue;}
-#h3 {background-color: black;}
+h3 {background-color: yellow; font-size: 30px;} /*태그 선택자*/
+.h3 {background-color: aqua; color: aliceblue;} /* class선택자*/
+#h3 {background-color: black;} /*id선택자*/
 
 #div1 {background-color: gold; width: 200px; height: 200px;}
 .class01 {background-color: khaki; width: 200px; height: 200px;}
