--- a/ex08.css
+++ b/ex08.css
@@ -1,7 +1,7 @@
 #div1 {
     width: 1200px; height: 1200px;
     border: 1px solid;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat;   /*이미지 반복 방지*/
     background-size: 1200px 1200px;/*가로, 세로*/
     background-position: 300px 200px; /*위, 왼*/
     background-image: url("이미지.jpg");
