--- a/ex09.css
+++ b/ex09.css
@@ -13,6 +13,6 @@
     width: 300px; background: gray;}
 #div1 div { width: 100px; }
 
-#div1 :nth-of-type(1){ order: 3;  background-color: aqua;}
+#div1 :nth-of-type(1){ order: 3;  background-color: aqua;}  /*순서배치(숫자 작을수록 앞)*/
 #div1 :nth-of-type(2){ order: 2; background-color: blue;}
 #div1 :nth-of-type(3){ order: 1; background-color: brown;}
