--- a/ex11.css
+++ b/ex11.css
@@ -1,6 +1,8 @@
 #login {
     width: 360px; height: 230px;
     box-shadow: 0 0 8px lightgray;
+    display: none;
+    margin: 100px auto;
 }
 #login > .title{
     /* background-color: bisque; */
