--- a/ex12.css
+++ b/ex12.css
@@ -1,8 +1,8 @@
-#modal {
-    position: absolute; background-color: rgba(0, 0, 0, 0.1);
-    top: 0; left: 0;
+a{position: absolute; z-index: 10; background-color: aqua;
+    &:hover ~ #login{
+        display: block;
+    }
 }
-a{position: absolute; z-index: 10; background-color: aqua;}
 
 #static2, #relative2, #absolute2, #fixed2 {width: 100px; height: 100px;}
 #static2 {background-color: rebeccapurple; z-index: 1;} /*z-index: 순서배치(숫자 클수록 위로 옴)*/
